<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Percent calculator</string>
    <string name="result_page_result">Result</string>
    <string name="home_page_percent_rate">Percent rate</string>
    <string name="home_page_years_contribution">Years contribution</string>
    <string name="home_page_depositors">Depositors</string>
    <string name="home_page_deposit">The initial deposit</string>
    <string name="home_page_add_in_months">Monthly adding</string>
    <string name="home_page_break_add_in_months">Month when stop adding</string>
    <string name="home_page_takeoff_month">Monthly takeoff</string>
    <string name="home_page_takeoff">How much takeoff</string>
    <string name="home_page_calculate">Go</string>

    <string name="result_page_date">Date</string>
    <string name="result_page_incomming">Profit</string>
    <string name="result_page_total">Total</string>
    <string name="result_page_takeoff">Takeoff</string>
    <string name="result_page_add_in_month">Month add</string>
    <string name="result_page_percent_in_month">Percents</string>
    <string name="result_page_end_takeoff">Month stop takeoff</string>
    <string name="result_page_details">Details</string>
    <string name="result_page_persen_In_month">%.2f%% in month</string>

</resources>
